# wineapp-v3

./: .cursorignore  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.app.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  start-dev.sh  stop-dev.sh
.cursor/: frontend-refactor.md  implementation-plan.md  lesson.md  payment-impl.md  plan.md  project-plan.md
.cursor/rules/: agent-instruction.mdc  backend-instruction.mdc  debug.mdc  frontend-instruction.mdc  openai-agents.mdc  parser-implementation.mdc  project-plan.mdc  pydantic-best-practices.mdc
backend/: .dockerignore  .env.dev  .env.example  .env.prod  .env.production  .env.test  .vercelignore  Dockerfile  Dockerfile.dev  Makefile  README.md  langgraph.json  pyproject.toml  pytest.ini  requirements.txt  run.py  run_tests.py  run_tests_no_docker.sh  run_with_supabase.sh  test_black_formatting.py  test_interaction.sh  test_interaction_api.py  vercel.json
backend/app/: main.py
backend/app/api/: api.py
backend/app/api/endpoints/: wines.py
backend/app/core/: config.py  supabase.py
backend/app/schemas/: wine.py
backend/db/: schema.sql
backend/migrations/: search_history_rls.sql
backend/scripts/: dev.sh  run_tests.sh  test.sh
backend/src/: __init__.py  main.py  models.py
backend/src/ai/: extract_wine_agent.py  wine_detail_agent.py
backend/src/ai/chat/: config.py  graph.py  run_graph.py  state.py
backend/src/auth/: __init__.py  models.py  router.py  service.py  utils.py
backend/src/cellar/: __init__.py  api.py  router.py  schemas.py  service.py
backend/src/chat/: __init__.py  router.py  schemas.py  service.py
backend/src/core/: __init__.py  config.py  mock.py  storage_utils.py  supabase.py
backend/src/core/mock_data/: cellar_items.json  cellars.json  tasting_notes.json  users.json  wines.json
backend/src/crawler/: __init__.py  firecrawl_api.py  wine_searcher.py
backend/src/crawler/ws_parser/: TASKS.md  model.py  parser.py
backend/src/interactions/: __init__.py  router.py  schemas.py  service.py
backend/src/notes/: __init__.py  router.py  schemas.py  service.py
backend/src/offers/: service.py
backend/src/search/: __init__.py  api.py  router.py  schemas.py  service.py
backend/src/search/history/: __init__.py  schemas.py  service.py
backend/src/wines/: README.md  __init__.py  api.py  router.py  schemas.py  service.py
backend/supabase/: seed.sql
backend/supabase/migrations/: 00000000000000_schema.sql
backend/tests/: README.md  __init__.py  conftest.py  test_main.py  test_wine_chat.py  test_wine_service.py  test_wine_user_endpoint.py
backend/tests/auth/: test_auth.py  test_supabase_integration.py
backend/tests/cellar/: cellar_test_service.py  test_api.py
backend/tests/core/: test_config.py  test_supabase.py
backend/tests/integration/: test_search_api.py  test_wine_integration.py
backend/tests/wine_searcher_parser/: test_parser.py
backend/tests/wine_searcher_parser/outputs/: 207d86d3b1a31ac3cf68e65d8a4b09c3_output.json  a05f7ef63809841bf5a20956de30b968_output.json
backend/tests/wines/: mock_wines.py  test_api.py  test_service.py  wines_test_api.py  wines_test_router.py  wines_test_service.py
frontend/: .dockerignore  .eslintrc.js  .gitignore  App.tsx  Dockerfile  README.md  app.config.js  app.json  eas.json  jest.config.js  jest.setup.js  metro.config.js  openapi-ts.config.ts  package.json
frontend/coverage/: clover.xml  coverage-final.json  lcov.info
frontend/ios/: Podfile
frontend/scripts/: update-api.js
scripts/: format.sh  lint.sh  package.json  start_local_env.sh  test-local-upload.js  test-supabase-upload.js
supabase/: README.md  config.toml  migration-strategy.md  seed.sql  test_user.sql
supabase/functions/: test_insert_user.sql
supabase/migrations/: 20240401000000_create_tables.sql  20240401000001_update_wines_table.sql  README.md  (+31 more)
wineapp/: app.json  eas.json  package.json
(+138 files in other folders)
