[project]
name = "wine-app-backend"
version = "0.1.0"
description = "Backend for Wine App"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Wine App Team"}
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "supabase>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.0.262",
    "httpx>=0.24.0",  # For TestClient
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
select = ["E", "F", "I"]
line-length = 88

[tool.black]
line-length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require infrastructure (deselect with '-m \"not integration\"')",
] 